<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="550dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@color/ghost_white"
    android:padding="1dp">

    <TextView
        android:id="@+id/text_instruction"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginBottom="144dp"
        android:gravity="center"
        android:text="@string/main_instruction_text_1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_previous_instruction"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@drawable/btn_previous_grey"
        android:contentDescription="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_next_instruction"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instruction"
        app:layout_constraintVertical_bias="0.782">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_next_instruction"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="360dp"
        android:background="@drawable/btn_next"
        android:contentDescription="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_instruction"
        app:layout_constraintVertical_bias="0.782">
    </androidx.appcompat.widget.AppCompatButton>

    <ImageView
        android:id="@+id/image_instruction_image"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:contentDescription="@string/instruction"
        android:padding="1dp"
        android:src="@drawable/img_main_instruction_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.787"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.464">
    </ImageView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="50dp"
        android:id="@+id/button_close"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/btn_close"
        android:contentDescription="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>

