<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="500sp"
    android:layout_height="300sp"
    android:layout_gravity="center"
    android:background="@color/ghost_white">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:autoSizeMaxTextSize="1000dp"
        android:autoSizeMinTextSize="1dp"
        android:autoSizeTextType="uniform"
        android:gravity="center_horizontal"
        android:text="@string/solving_settings"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <CheckBox
        android:id="@+id/check_step_by_step"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/step_by_step_solve"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title">

    </CheckBox>

    <CheckBox
        android:id="@+id/check_ordinary_fraction"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:button="@null"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:text="@string/ordinary_fractions"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_step_by_step"/>

    <Spinner
        android:id="@+id/spin_solve_method"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:entries="@array/choose_method_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_ordinary_fraction" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_save_solve_settings"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/periwinkle"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spin_solve_method" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>